--- a/electric_motors/templates/dashboard/includes/admin_footer.html
+++ b/electric_motors/templates/dashboard/includes/admin_footer.html
@@ -4,8 +4,8 @@
         <div class="container-fluid">
             <div class="row text-body-secondary align-items-center">
                 <!-- Left: Logo -->
-                <div class="col-4 text-start d-flex align-items-center">  
-                    <a href="#" class="text-body-secondary">
+                <div class="col-4 text-start d-flex align-items-center" >  
+                    <a href="{% url 'Home_Page' %}" class="text-body-secondary" target="_blank">
                         <img src="{% static 'admin_panel/images/logo.png' %}" alt="Mzone Logo" class="me-2" style="height: 30px;">
                     </a>
                 </div>
