--- a/electric_motors/templates/dashboard/vehicle_data/add_vehicle.html
+++ b/electric_motors/templates/dashboard/vehicle_data/add_vehicle.html
@@ -43,6 +43,12 @@
                                     <label for="vehicle_product_short_desc" class="form-label vehicle-form-label">Short Description</label>
                                     <input type="text" class="form-control form-control-lg vehicle-input" id="vehicle_product_short_desc" name="vehicle_product_short_desc" placeholder="Enter short description" required>
                                 </div>
+
+                                <!-- Vehicle  Motor Type -->
+                                <div class="col-xxl-4 col-md-6">
+                                    <label for="vehicle_product_short_desc" class="form-label vehicle-form-label">Motor Type</label>
+                                    <input type="text" class="form-control form-control-lg vehicle-input" id="vehicle_motor_type" name="vehicle_motor_type" placeholder="Enter motor type" required>
+                                </div>
     
                                 <!-- Vehicle Range -->
                                 <div class="col-xxl-4 col-md-6">
@@ -76,28 +82,28 @@
     
                                 <!-- Vehicle Features -->
                                 <div class="col-xxl-6 col-md-6">
-                                    <label for="vehicle_feature_1" class="form-label vehicle-form-label">Feature 1</label>
+                                    <label for="vehicle_feature_1" class="form-label vehicle-form-label">Electric Drive</label>
                                     <input type="text" class="form-control form-control-lg vehicle-input" id="vehicle_feature_1" name="vehicle_feature_1" placeholder="Enter feature 1" required>
                                 </div>
     
                                 <div class="col-xxl-6 col-md-6">
-                                    <label for="vehicle_feature_2" class="form-label vehicle-form-label">Feature 2</label>
+                                    <label for="vehicle_feature_2" class="form-label vehicle-form-label">Silent Power</label>
                                     <input type="text" class="form-control form-control-lg vehicle-input" id="vehicle_feature_2" name="vehicle_feature_2" placeholder="Enter feature 2" required>
                                 </div>
     
                                 <div class="col-xxl-6 col-md-6">
-                                    <label for="vehicle_feature_3" class="form-label vehicle-form-label">Feature 3</label>
+                                    <label for="vehicle_feature_3" class="form-label vehicle-form-label">Zero Emissions</label>
                                     <input type="text" class="form-control form-control-lg vehicle-input" id="vehicle_feature_3" name="vehicle_feature_3" placeholder="Enter feature 3" required>
                                 </div>
     
                                 <div class="col-xxl-6 col-md-6">
-                                    <label for="vehicle_feature_4" class="form-label vehicle-form-label">Feature 4</label>
+                                    <label for="vehicle_feature_4" class="form-label vehicle-form-label">Zero Emissions</label>
                                     <input type="text" class="form-control form-control-lg vehicle-input" id="vehicle_feature_4" name="vehicle_feature_4" placeholder="Enter feature 4" required>
                                 </div>
     
                                 <!-- Vehicle Status -->
                                 <div class="col-xxl-6 col-md-6">
-                                    <label for="vehicle_status" class="form-label vehicle-form-label" >Status</label>
+                                    <label for="vehicle_status" class="form-label vehicle-form-label" >Longer Range</label>
                                     <input type="checkbox" class="form-check-input vehicle-input pl-3" id="vehicle_status" name="vehicle_status">
                                 </div>
     
