--- a/electric_motors/templates/includes/home_page/section_1/s1.html
+++ b/electric_motors/templates/includes/home_page/section_1/s1.html
@@ -24,7 +24,7 @@
             </div>
             <div class="col-lg-6">
                 <div class="subtitle bg-grey text-dark wow fadeInUp mb-3">Welcome to Mzone</div>
-                <h2>For a Cleaner, and Brighter Future</h2>
+                <h2>For a Cleaner and <br> Brighter Future</h2>
 
                 <div class="row">
                     <div class="col-lg-6">
@@ -32,7 +32,7 @@
                             <div class="absolute top-0 end-0">01</div>
                             <i class="bg-grey id-color p-3 rounded-10px fs-48 mb-4 icofont-read-book"></i>
                             <h4>Vehicles Catalog</h4>
-                            <p>Quis in ad dolore id ea consequat enim nulla quis tempor ut ut eu deserunt sed do sed velit non esse in ut nulla in in non pariatur esse.</p>
+                            <p>Explore our complete range of electric vehicles, designed for performance, efficiency, and a cleaner future.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -40,7 +40,7 @@
                             <div class="absolute top-0 end-0">02</div>
                             <i class="bg-grey id-color p-3 rounded-10px fs-48 mb-4 icofont-building"></i>
                             <h4>Find Store Near You</h4>
-                            <p>Quis in ad dolore id ea consequat enim nulla quis tempor ut ut eu deserunt sed do sed velit non esse in ut nulla in in non pariatur esse.</p>
+                            <p>Visit your nearest location to get expert guidance, test rides and personalized support.</p>
                         </div>
                     </div>
 
