--- a/electric_motors/templates/includes/home_page/section_2/s2.html
+++ b/electric_motors/templates/includes/home_page/section_2/s2.html
@@ -16,7 +16,7 @@
                     <i class="bg-color text-light fs-48 p-2 absolute id-color icofont-thunder-light rounded-10px"></i>
                     <div class="pl-90">
                         <h4>Electric Drive</h4>
-                        <p class="mb-0">Sunt dolor aliquip consectetur laborum incididunt tempor irure veniam amet et nostrud.</p>
+                        <p class="mb-0">Experience smooth, efficient performance with our advanced electric drivetrain.</p>
                     </div>
                 </div>
 
@@ -25,7 +25,7 @@
                     <i class="bg-dark text-light fs-48 p-2 absolute id-color icofont-volume-mute rounded-10px"></i>
                     <div class="pl-90">
                         <h4>Silent Power</h4>
-                        <p class="mb-0">Sunt dolor aliquip consectetur laborum incididunt tempor irure veniam amet et nostrud.</p>
+                        <p class="mb-0">Enjoy powerful rides with whisper-quiet operation.</p>
                     </div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                     <i class="bg-color text-light fs-48 p-2 absolute end-0 id-color icofont-leaf rounded-10px"></i>
                     <div class="pr-90">
                         <h4 class="text-end">Zero Emissions</h4>
-                        <p class="text-end mb-0">Sunt dolor aliquip consectetur laborum incididunt tempor irure veniam amet et nostrud.</p>
+                        <p class="text-end mb-0">Drive clean with an eco-friendly system that produces no harmful emissions.</p>
                     </div>
                 </div>
 
@@ -47,7 +47,7 @@
                     <i class="bg-dark text-light fs-48 p-2 absolute end-0 id-color icofont-road rounded-10px"></i>
                     <div class="pr-90">
                         <h4 class="text-end">Longer Range</h4>
-                        <p class="text-end mb-0">Sunt dolor aliquip consectetur laborum incididunt tempor irure veniam amet et nostrud.</p>
+                        <p class="text-end mb-0">Go further on a single charge with extended battery life.</p>
                     </div>
                 </div>
             </div>
