--- a/electric_motors/templates/includes/home_page/section_3/s3.html
+++ b/electric_motors/templates/includes/home_page/section_3/s3.html
@@ -6,24 +6,24 @@
         <div class="row g-4 gx-5">
             <div class="col-lg-4">
                 <div class="subtitle bg-white text-dark wow fadeInUp mb-3">Drive Electric</div>
-            <h2 class="wow fadeInUp">For a Cleaner, and Brighter Future</h2>
+            <h2 class="wow fadeInUp">Empowering a Greener, More Sustainable Future.</h2>
             </div>
 
             <div class="col-lg-4">
                 <h4 class="mb-4 wow fadeInRight">Why choose us</h4>
                 <ol class="ol-style-1">
-                    <li class="wow fadeInUp" data-wow-delay=".2s">Magna aliquip nulla fugiat esse occaecat occaecat sunt non.</li>
-                    <li class="wow fadeInUp" data-wow-delay=".4s">Fugiat amet dolore elit irure in ad ad voluptate nostrud.</li>
-                    <li class="wow fadeInUp" data-wow-delay=".6s">Cupidatat magna mollit incididunt culpa cillum non.</li>
+                    <li class="wow fadeInUp" data-wow-delay=".2s"><strong>Innovative Technology</strong> : <br> We offer cutting-edge electric vehicles designed for efficiency, performance, and sustainability.</li>
+                    <li class="wow fadeInUp" data-wow-delay=".4s"><strong>Eco-Friendly Commitment</strong> :<br> Our products are built with the environment in mind, helping you contribute to a greener planet.</li>
+                    <li class="wow fadeInUp" data-wow-delay=".6s"><strong>Exceptional Customer Support</strong> :<br> Our dedicated team ensures you receive top-notch service, from purchase to aftercare, every step of the way.</li>
                 </ol>
             </div>
 
             <div class="col-lg-4">
                 <h4 class="mb-4 wow fadeInRight">Our advantages</h4>
                 <ol class="ol-style-1 dark">
-                    <li class="wow fadeInUp" data-wow-delay=".2s">Magna aliquip nulla fugiat esse occaecat occaecat sunt non.</li>
-                    <li class="wow fadeInUp" data-wow-delay=".4s">Fugiat amet dolore elit irure in ad ad voluptate nostrud.</li>
-                    <li class="wow fadeInUp" data-wow-delay=".6s">Cupidatat magna mollit incididunt culpa cillum non.</li>
+                    <li class="wow fadeInUp" data-wow-delay=".2s"><strong>Cutting-Edge Technology</strong> : <br> We incorporate the latest innovations to provide top-tier performance and reliability.</li>
+                    <li class="wow fadeInUp" data-wow-delay=".4s"><strong>Eco-Friendly Solutions</strong> : <br> Our products are designed to reduce environmental impact, offering a sustainable and green alternative.</li>
+                    <li class="wow fadeInUp" data-wow-delay=".6s"><strong>Exceptional Customer Support</strong> : <br> We provide personalized assistance and expert guidance to help you make the best choices for your needs.</li>
                 </ol>
             </div>
         </div>
