--- a/electric_motors/templates/dashboard/vehicle_data/edit_vehicle.html
+++ b/electric_motors/templates/dashboard/vehicle_data/edit_vehicle.html
@@ -71,6 +71,18 @@
                                     </div>
                                 </div>
 
+                                <!-- Vehicle  Motor Type -->
+                                <div class="col-xxl-12 col-md-12">
+                                    <div class="row">
+                                        <div class="col-6 d-flex align-items-center">
+                                            <label for="vehicle_product_short_desc" class="form-label vehicle-form-label">Vehicle Motor Type</label>
+                                        </div>
+                                        <div class="col-6">
+                                            <input type="text" class="form-control form-control-lg vehicle-input" id="vehicle_motor_type" name="vehicle_motor_type" placeholder="Enter motor type" value="{{ edit_vehicle.vehicle_motor_type }}" >
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <!-- Vehicle Range -->
                                 <div class="col-xxl-12 col-md-12">
                                     <div class="row">
@@ -135,7 +147,7 @@
                                 <div class="col-xxl-12 col-md-12">
                                     <div class="row">
                                         <div class="col-6 d-flex align-items-center">
-                                            <label for="vehicle_feature_1" class="form-label vehicle-form-label">Feature 1</label>
+                                            <label for="vehicle_feature_1" class="form-label vehicle-form-label">Electric Drive</label>
                                         </div>
                                         <div class="col-6">
                                             <input type="text" class="form-control form-control-lg vehicle-input" id="vehicle_feature_1" name="vehicle_feature_1" placeholder="Enter feature 1" value="{{ edit_vehicle.vehicle_feature_1 }}" >
@@ -146,7 +158,7 @@
                                 <div class="col-xxl-12 col-md-12">
                                     <div class="row">
                                         <div class="col-6 d-flex align-items-center">
-                                            <label for="vehicle_feature_2" class="form-label vehicle-form-label">Feature 2</label>
+                                            <label for="vehicle_feature_2" class="form-label vehicle-form-label">Silent Power</label>
                                         </div>
                                         <div class="col-6">
                                             <input type="text" class="form-control form-control-lg vehicle-input" id="vehicle_feature_2" name="vehicle_feature_2" placeholder="Enter feature 2" value="{{ edit_vehicle.vehicle_feature_2 }}" >
@@ -157,7 +169,7 @@
                                 <div class="col-xxl-12 col-md-12">
                                     <div class="row">
                                         <div class="col-6 d-flex align-items-center">
-                                            <label for="vehicle_feature_3" class="form-label vehicle-form-label">Feature 3</label>
+                                            <label for="vehicle_feature_3" class="form-label vehicle-form-label">Zero Emissions</label>
                                         </div>
                                         <div class="col-6">
                                             <input type="text" class="form-control form-control-lg vehicle-input" id="vehicle_feature_3" name="vehicle_feature_3" placeholder="Enter feature 3" value="{{ edit_vehicle.vehicle_feature_3 }}" >
@@ -168,7 +180,7 @@
                                 <div class="col-xxl-12 col-md-12">
                                     <div class="row">
                                         <div class="col-6 d-flex align-items-center">
-                                            <label for="vehicle_feature_4" class="form-label vehicle-form-label">Feature 4</label>
+                                            <label for="vehicle_feature_4" class="form-label vehicle-form-label">Longer Range</label>
                                         </div>
                                         <div class="col-6">
                                             <input type="text" class="form-control form-control-lg vehicle-input" id="vehicle_feature_4" name="vehicle_feature_4" placeholder="Enter feature 4" value="{{ edit_vehicle.vehicle_feature_4 }}" >
