--- a/electric_motors/templates/includes/header.html
+++ b/electric_motors/templates/includes/header.html
@@ -26,39 +26,26 @@
                                         <div class="container">
                                             <div class="sb-menu p-4">
                                                 <div class="row g-4">
-                                                    <div class="col-lg-4 text-center">
-                                                        <div class="bg-grey p-2 rounded-10px relative hover text-center">
-                                                            <a href="{% url 'Vehicles_Data' %}">
-                                                                <img src="{% static 'images/misc/4.webp' %}" class="w-100 relative z-1000 hover-scale-1-2" alt="no image">
-                                                                <img src="{% static 'images/misc/10.webp' %}" class="absolute start-10 top-10 w-20" alt="no image">
-                                                            </a>
-                                                            <div class="absolute w-100 h-100 start-0 top-0 rounded-10px hover-bg-color"></div>
-                                                        </div>                            
-                                                        <h4 class="mt-3 mb-1">Mzone R100</h4>
-                                                        <p class="mb-0">Ride the Future: Silent, Smooth, Electric</p>                            
-                                                    </div>
-                                                    <div class="col-lg-4 text-center">
-                                                        <div class="bg-grey p-2 rounded-10px relative hover text-center">
-                                                            <a href="{% url 'Vehicles_Data' %}">
-                                                                <img src="{% static 'images/misc/m2.webp' %}" class="w-100 relative z-1000 hover-scale-1-2" alt="no image">
-                                                                <img src="{% static 'images/misc/10.webp' %}" class="absolute start-10 top-10 w-20" alt="no image">
-                                                            </a>
-                                                            <div class="absolute w-100 h-100 start-0 top-0 rounded-10px hover-bg-color"></div>
+                                                    {% for latest in latest_vehicle %}
+                                                        <div class="col-lg-4 text-center">
+                                                            <div class="bg-grey p-2 rounded-10px relative hover text-center">
+                                                                <a href="{% url 'Vehicles_Data' latest.vehicle_id %}">
+                                                                    <img src="{{latest.vehicle_image.url}}" class="w-100 relative z-1000 hover-scale-1-2" alt="no image">
+                                                                    {% comment %} <img src="{% static 'images/misc/10.webp' %}" class="absolute start-10 top-10 w-20" alt="no image"> {% endcomment %}
+                                                                </a>
+                                                                <div class="absolute w-100 h-100 start-0 top-0 rounded-10px hover-bg-color"></div>
+                                                            </div>                           
+                                                            <h4 class="mt-3 mb-1">
+                                                                        {% if latest.vehicle_status %}
+                                                                        <span class="bg-color me-2 fs-15 px-2 rounded-5px text-uppercase anim-op-blink-to-light">
+                                                                            New
+                                                                        </span>
+                                                                    {% endif %}
+                                                                {{latest.vehicle_name}}
+                                                            </h4>
+                                                            <p class="mb-0">{{latest.vehicle_short_title}}</p>                            
                                                         </div>
-                                                        <h4 class="mt-3 mb-1"><span class="bg-color me-2 fs-15 px-2 rounded-5px text-uppercase anim-op-blink-to-light">New</span>Mzone R200</h4>
-                                                        <p class="mb-0">Redefining Motorcycle Performance.</p>
-                                                    </div>
-                                                    <div class="col-lg-4 text-center">
-                                                        <div class="bg-grey p-2 rounded-10px relative hover text-center">
-                                                            <a href="{% url 'Vehicles_Data' %}">
-                                                                <img src="{% static 'images/misc/m3.webp' %}" class="w-100 relative z-1000 hover-scale-1-2" alt="no image">
-                                                                <img src="{% static 'images/misc/10.webp' %}" class="absolute start-10 top-10 w-20" alt="no image">
-                                                            </a>
-                                                            <div class="absolute w-100 h-100 start-0 top-0 rounded-10px hover-bg-color"></div>
-                                                        </div>
-                                                        <h4 class="mt-3 mb-1">Mzone R300</h4>
-                                                        <p class="mb-0">Where Sustainability Meets Adventure.</p>
-                                                    </div>
+                                                    {% endfor %}
                                                 </div>
                                             </div>
                                         </div>                                                
@@ -73,7 +60,7 @@
                     </div>
                     <div class="de-flex-col">
                         <div class="menu_side_area">          
-                            <a href="https://wa.me/919961467400" class="btn-line">Book a Test Drive</a>
+                            <a href="{% url 'Contact_Us' %}" class="btn-line">Book a Test Drive</a>
                             <span id="menu-btn"></span>
                         </div>
                     </div>
