--- a/electric_motors/templates/includes/home_page/section_4/s4.html
+++ b/electric_motors/templates/includes/home_page/section_4/s4.html
@@ -12,17 +12,22 @@
             </div>
         </div>
         <div class="row g-4">
-            {% for data in vehicle_data %}
+            {% for latest_data in latest_vehicle %}
                 <div class="col-lg-4 text-center">
                     <div class="bg-grey p-2 rounded-10px relative hover text-center">
-                        <a href="vehicle-single-1.html">
-                            <img src="{{data.vehicle_image.url}}" class="w-100 relative z-1000 hover-scale-1-2" alt="no image">
-                            <img src="{% static 'images/misc/10.webp' %}" class="absolute start-10 top-10 w-20" alt="no image">
+                        <a href="{% url 'Vehicles_Data' latest_data.vehicle_id %}">
+                            <img src="{{latest_data.vehicle_image.url}}" class="w-100 relative z-1000 hover-scale-1-2" alt="no image">
                         </a>
                         <div class="absolute w-100 h-100 start-0 top-0 rounded-10px hover-bg-color"></div>
                     </div>                            
-                    <h4 class="mt-3 mb-1"><span class="bg-color me-2 fs-15 px-2 rounded-5px text-uppercase anim-op-blink-to-light">{{data.vehicle_status}}</span>{{data.vehicle_name}}</h4>
-                    <p class="mb-0">{{data.vehicle_product_short_desc}}</p>                            
+                    <h4 class="mt-3 mb-1">
+                        {% if latest_data.vehicle_status %}
+                            <span class="bg-color me-2 fs-15 px-2 rounded-5px text-uppercase anim-op-blink-to-light">
+                                New
+                            </span>
+                        {% endif %}
+                        {{latest_data.vehicle_name}}</h4>
+                    <p class="mb-0">{{latest_data.vehicle_product_short_desc}}</p>                            
                 </div>
             {% endfor %}
         </div>
